--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,7 @@
             <div class="logo">Pizza Paradicsom</div>
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
+                <li><a href="rolunk.html">Rólunk</a></li>
                 <li><a href="menu.html">Pizza Kínálat</a></li>
                 <li><a href="cart.html">Kosár (<span id="cart-item-count-menu">0</span>)</a></li>
             </ul>
